# GreenEngine

./: CMakeLists.txt  Main.cpp  README.md  fileignore.gitignore  glad.c
InnoSetup/: GreenEngineInstallerScript.iss  calculatorSave_1.iss  installerScript.iss
